--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,14 @@ body {
 }
 
 .search-container {
-   
+    background-color: #fff;
+    border-color: #dbdbdb;
+    color: #363636;
+    cursor: pointer;
+    display: block;
+    font-size: 1em;
+    max-width: 100%;
+    outline: 0;
 }
 
 select {
