--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Lora', serif;
+}
+
 body {
     justify-content: center;
     align-items: center;
@@ -37,7 +41,7 @@ h2 {
     margin: 0 auto;
 }
 .stateselector {
-    align-tems: center;
+    align-items: center;
     width: 200px;
 }
 
