--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,18 @@
+styles.css
+
+
+
 * {
     font-family: 'Lora', serif;
+}
+
+h1,
+h2 {
+    font-family: 'Lora', serif;
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
