--- a/assets/css/styles-results.css
+++ b/assets/css/styles-results.css
@@ -1,6 +1,3 @@
-#parkResults {
-   
-}
 
 h1 {
     background-image: url('../image/yosemite-valley-sunset.jpg');
@@ -9,31 +6,37 @@ h1 {
 }
 
 body {
-    /* add flex to page */
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: lightgray;
 }
 
+
 p {
-    display: block;
-    /*
     text-align: center;
-    justify-content: center;
-    align-items: center;
-    */
+    flex-wrap: wrap;
     /* For Debugging Purposes */
     /* border: solid red; */
 }
 
+
+ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  
 li {
     border: solid rgb(96, 95, 95) 1px;
     box-shadow: 4px 5px 4px rgb(114, 116, 117);
-    display: inline-block;
-    width: 20%;
     padding: 10px;
-    /* For Debugging Purposes */
-    /* border: solid green; */
-}
+    width: 20%; /* adjust width to your preference */
+  }
 
 li.p{
     /* For Debugging Purposes */
