--- a/assets/css/styles-results.css
+++ b/assets/css/styles-results.css
@@ -1,3 +1,11 @@
+.top {
+    margin-left: 25%;
+    margin-right: 25%;
+    border-radius: 0.5em;
+}
+
+
+
 ul {
     display: flex;
     list-style: none;
@@ -13,6 +21,7 @@ li {
     box-shadow: 4px 5px 4px rgb(114, 116, 117);
     padding: 10px;
     width: 20%; 
+    border-radius: 0.5em;
 }
 
 .go-back{
@@ -26,4 +35,5 @@ li {
     width: 120px;
     margin: 0 auto;
     border: solid white 2px;
+    border-radius: 0.5em;
 }
