--- a/assets/css/styles-results.css
+++ b/assets/css/styles-results.css
@@ -1,7 +1,23 @@
+.resultscontainer {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.callout.warning,
+.callout.primary {
+    border-radius: 0.5em;
+}
+
+.callout.warning {
+    margin-bottom: 0;
+}
+
+
 .top {
     margin-left: 25%;
     margin-right: 25%;
     border-radius: 0.5em;
+    margin-top: 3%;
 }
 
 
@@ -36,4 +52,6 @@ li {
     margin: 0 auto;
     border: solid white 2px;
     border-radius: 0.5em;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
