--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,7 @@ body {
     background-image: url('../image/yosemite-valley-sunset.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100vh;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,7 +52,6 @@ body {
     font-size: 1em;
     max-width: 100%;
     outline: 0;
-    border-radius: 0.5em;
 }
 
 select {
